Add command line options, image converter, and JPEG quality selector functionality

--- a/src/toSrgbApp/toSrgbApp.csproj
+++ b/src/toSrgbApp/toSrgbApp.csproj
@@ -18,4 +18,8 @@
         <RepositoryUrl>https://github.com/nao7sep/toSrgb</RepositoryUrl>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="14.6.0" />
+    </ItemGroup>
+
 </Project>
