--- a/src/toSrgbApp/toSrgbApp.csproj
+++ b/src/toSrgbApp/toSrgbApp.csproj
@@ -9,7 +9,7 @@
         <!-- Project Metadata -->
         <AssemblyTitle>toSrgbApp</AssemblyTitle>
         <Product>toSrgb</Product>
-        <Description>A console utility for color space conversion to sRGB.</Description>
+        <Description>A user-friendly tool for converting JPEG images to sRGB with quality presets, filename cleaning, and organized output.</Description>
         <Company>Purrfect Code</Company>
         <Authors>nao7sep</Authors>
         <Copyright>Copyright © 2025</Copyright>
